styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
ul {
  list-style-type: none;
  overflow: hidden;
}
li {
  float: right;
}
#logo {
  float: left;
  padding: 1rem;
  position: relative;
  left: 2rem;
  font-size: 1.5rem;
  padding-left: 1.5rem;
}
#logo ::before {
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  background-color: gray;
  position: absolute;
  border-radius: 50%;
  left: -0.5rem;
  top: 1rem;
}
ul {
  padding: 1rem 2rem;
}
li a {
  text-decoration: none;
  display: block;
  padding: 1rem;
  color: black;
  font-size: 1.5rem;
}
main {
  width: 100vw;
}
.page-container {
  width: 1300px;
  /* height: 3000px; */
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin: 0 auto;
  gap: 5rem;
}
.text-container-1 {
  text-align: center;
  line-height: 5rem;
}
h1 {
  font-size: 65.34px;
}
p {
  font-size: 1rem;
}
h2 {
  font-size: 50.52px;
}
button {
  height: 56px;
  width: 251px;
  border-radius: 67px;
  background-color: #285e67;
  border: none;
  color: white;
  font-size: 1rem;
  margin-bottom: 3rem;
}

.img-container-1 {
  display: flex;
  justify-content: space-between;
}
.img-conatiner1 {
  width: 626px;
  height: 391px;
}
.container-2 {
  height: 446px;
  background-color: #f4f4f4;
  display: flex;
  align-items: center;
  justify-content: center;
}
.text-container-2 {
  height: 342.54px;
  width: 589px;
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}
.box {
  height: 187.54px;
  width: 260px;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.icon {
  height: 58px;
  width: 57px;
}
.box-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
#img-container-2 {
  height: 291px;
  width: 294px;
}
.container-3 {
  height: 578px;
  display: grid;
  grid-template-columns: 1fr 1fr;
}
#img-container-3 {
  width: 623.5px;
}
.list-container-3 {
  display: flex;
  gap: 1rem;
}
.img-icon-container-3 {
  display: inline-block;
  height: 52px;
  width: 52px;
  border: 2px solid #285e67;
  border-radius: 50%;
  position: relative;
}
.img-icon-3 {
  height: 30.99px;
  width: 27.27px;
  position: absolute;
  top: 10px;
  left: 11px;
}
.list-text-container-3 {
  display: flex;
  align-items: center;
  font-size: 1rem;
}
.text-container-3 {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}

#img-container-4 {
  height: 347px;
  width: 350px;
}
.container-4 {
  height: 446px;
  background-color: #f4f4f4;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
.img-container-5 {
  background-image: url(background.png);
  background-size: 1300px 667px;
  height: 667px;
  width: 1300px;
  position: relative;
}
.img-text-box {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  height: 340px;
  width: 650px;
  /* margin: 0 auto; */
  position: absolute;
  top: 13%;
  left: 25%;
}
.img-text-box img {
  height: 82.06px;
  width: 92.12px;
  align-self: center;
}
.img-text-box h3 {
  font-size: 37.9px;
}
.img-text-box button {
  height: 56px;
  width: 257px;
  background-color: rgba(0, 0, 0, 0);
  border: 2px solid rgb(255, 255, 255);
  align-self: center;
  color: white;
  font-size: 21.33px;
}

.text-box {
  /* height: 190px; */
  width: 650px;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  color: white;
}
.interaction-box {
  height: 356px;
  width: 1165px;
  background-color: #fce2d7;
  border-radius: 12px;
  position: absolute;
  left: 5%;
  top: 70%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}
.icon2 {
  width: fit-content;
  display: flex;
  margin: 0 auto;
}
.icon2 img {
  height: 82px;
  width: 82px;
  padding: 5px;
}
p {
  text-align: center;
  font-size: 20px;
}
.icon-conatiner {
  margin-top: 50%;
}

